add script.js, connect to index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>What's Up Welcome to my Great Website</h1>
+        <script src="script.js"></script>
     </body>  
 </html>
